<resources>
    <string name="app_name">The Tale of Wayang</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Tale of Wayang</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_search">Pencarian</string>
    <string name="app_logo">App Logo</string>
    <string name="title_favorite">Favorit</string>
    <string name="no_data">Anda belum memiliki wayang favorit. Ayo segera tambahkan!</string>
    <string name="no_wayang">Anda belum pernah memindai wayang. Ayo segera pindai wayang!</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="image_description">Image</string>
    <string name="icon_description">Icon</string>
    <string name="text_primary">Sample of title text</string>
    <string name="item_name">Nama Wayang</string>
    <string name="detail_desc">Deskripsi</string>
    <string name="video">Watch Video</string>
    <string name="floating_button">floating_button</string>
    <string name="menu_favorite">Wayang Favorit</string>
    <string name="button">Button</string>
    <string name="title_stories">Stories</string>
    <string name="title_wayang">Wayang</string>
    <string name="classify">Klasifikasi</string>
    <string name="hasil_1_nhasil_2_nhasil_3"><b>Hasil 1</b>\nHasil 2\nHasil 3</string>
    <string name="buttonSelectPhoto">Pilih Gambar</string>
    <string name="scan">Scan Wayang</string>
    <string name="pick">Ambil Galeri</string>
    <string name="app_desc">The Tale of Wayang merupakan aplikasi pengenalan karakter dan cerita pewayangan yang disajikan dengan konsep interaktif dan memanfaatkan teknologi machine learning untuk mengklasifikasi jenis wayang</string>
    <string name="welcome">Selamat Datang</string>
    <string name="get_gallery">Foto Wayang</string>
    <string name="get_camera">Pakai Kamera</string>
    <string name="rem_fav">%s telah dihapus dari favorit!</string>
    <string name="add_fav">%s telah ditambahkan ke favorit!</string>
    <string name="scan_wayang">Klasifikasi Wayang</string>
    <string name="menu_wayang">Wayangku</string>
    <string name="detail">Lihat Detail</string>
</resources>