<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="id.cavannus.thetaleofwayang.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="id.cavannus.thetaleofwayang.wayang.gallery.GalleryFragment"
        android:label="@string/menu_wayang"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_search"
        android:name="id.cavannus.thetaleofwayang.wayang.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="id.cavannus.thetaleofwayang.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>