<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".classifier.GetGalleryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/get_gallery_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ColorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/get_gallery_btn_back"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/icon_description"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/detail_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_gallery"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppins"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_result_gallery"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="32dp"
            android:padding="10dp"
            android:background="@drawable/border_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/btn_get_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/pick"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/img_result_gallery"
            app:layout_constraintTop_toBottomOf="@+id/img_result_gallery" />

        <Button
            android:id="@+id/btn_classify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/classify"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_get_gallery"
            app:layout_constraintEnd_toEndOf="@+id/img_result_gallery"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_get_gallery"
            app:layout_constraintTop_toTopOf="@+id/btn_get_gallery"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/mResultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="display_result"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_classify"
            app:layout_constraintVertical_bias="0.057" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>