<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    tools:ignore="HardcodedText">

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@color/ColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/wayang_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_item"
        tools:text="@string/item_name"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/text_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="5dp"
        android:gravity="start"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toTopOf="@+id/btn_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/wayang_name"
        app:layout_constraintTop_toBottomOf="@+id/wayang_name"
        tools:text="@string/detail_desc"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/btn_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="278dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:drawablePadding="10dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_area" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/detail_desc"
        android:textColor="@color/ColorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_video"
        app:layout_constraintTop_toBottomOf="@+id/btn_video" />

    <TextView
        android:id="@+id/text_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toTopOf="@+id/instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/instruction"
        app:layout_constraintTop_toBottomOf="@+id/instruction"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/detail_desc"
        android:textIsSelectable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>